# mib-viewer

./: .gitignore  CHANGELOG.md  CONVERSATION_SUMMARY.md  DOWNLOAD.md  EMD_EXPORT_IMPLEMENTATION.md  GITHUB_PREP.md  LARGE_FILE_LAZY_LOADING_PLAN.md  MibViewer.spec  README.md  WINDOWS_BUILD.md  WINDOWS_INSTALL.md  analyze_4d_mib.ipynb  build_exe.py  build_windows_exe.bat  compare_bf_adf_shifts.py  generate_test_eels_data.py  pyproject.toml  requirements.txt  run_mib_viewer.bat  standalone_main.py  superres_steps_to_add.py  test_full_adf_superres.py  test_pairwise_alignment_minimal.py  test_superres.py  test_superres_annular.py  test_superres_real.py  test_windows_setup.bat
.github/workflows/: build-linux.yml  build-release.yml  build-windows.yml  create-release-signed.yml  create-release.yml
deprecated_v2_files/: adaptive_chunking_v2.py  adaptive_converter_v2.py  enhanced_converter.py  test_adaptive_chunking_v2.py  test_converter_v2.py  test_mibproperties_fix.py  test_real_mib_comparison.py  test_real_mib_file.py
docs/superres/: ADF_SUPERRES_RESULTS.md  RELEASE_NOTES.md  SUPERRES-TAB-REDESIGN.md  SUPERRES_CACHE_IMPLEMENTATION_PLAN.md  TASK2_STEP2_FFT_EXPLORER_PLAN.md  WEEKEND_STATUS_NOTE.md
experiments/super_resolution_bf/: Step_by_Step_Super_Resolution.ipynb  Super-Resolution_Bright_Field_Tutorial.ipynb  helper_functions.py
src/mib_viewer/: __init__.py  __main__.py  main.py  main_pyqtgraph.py
tests/: README.md  __init__.py  test_chunking_simple.py  test_gui_integration.py
tests/debug/: __init__.py  debug_conversion_performance.py  debug_coordinate_mapping.py  (+1 more)
(+42 files in other folders)
