[project]
name = "mib-viewer"
version = "1.1.0"
description = "MIB EELS Viewer - Interactive GUI for viewing MIB EELS data and ndata images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyqt5>=5.15.11,!=5.15.17",  # Exclude 5.15.17 due to missing Windows wheels for pyqt5-qt5
    "h5py>=3.0.0",
    "emdfile>=0.0.16",
    "tqdm>=4.60.0",
    "py4dstem>=0.14.16",
    "pyqtgraph>=0.13.7",
    "psutil>=5.8.0",  # For memory detection and system monitoring
]

[project.scripts]
mib-viewer = "mib_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mib_viewer"]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
